--- a/git/formuladb-env/frmdb-apps/hotel-booking/_scripts.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_scripts.html
@@ -1,10 +1,5 @@
 <div data-frmdb-fragment="_scripts.html">
 <script src="/formuladb/frmdb-fe.js"></script>
 <script src="https://storage.googleapis.com/formuladb-static-assets/elastic-apm-rum.umd.min.js"></script>
-<script>
-        elasticApm.init({
-            serviceName: 'hotel-booking',
-            serverUrl: 'https://apmserver.formuladb.io'
-        })
-    </script>
+<link rel="stylesheet" href="/formuladb/icons/frmdb-icons.css">
 </div>
