--- a/git/formuladb-env/frmdb-apps/hotel-booking/_form.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_form.html
@@ -10,7 +10,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <div class="input-group date">
-                        <input type="text" class="form-control" placeholder="Arrival Date" required="" data-frmdb-value="$FRMDB.Booking[].start_date">
+                        <input type="date" class="form-control" placeholder="Arrival Date" required="" data-frmdb-value="$FRMDB.Booking[].start_date">
                         <div class="input-group-append">
                             <span class="input-group-text">
                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group date">
-                        <input type="text" class="form-control" placeholder="Departure Date" required="" data-frmdb-value="$FRMDB.Booking[].end_date">
+                        <input type="date" class="form-control" placeholder="Departure Date" required="" data-frmdb-value="$FRMDB.Booking[].end_date">
                         <div class="input-group-append">
                             <span class="input-group-text">
                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
