--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -1,25 +1,19 @@
 <!--================Header Area =================-->
-<header class="header_area">
-    <frmdb-fragment name="_nav.html"></frmdb-fragment>
+<header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+    <div class="jumbotron">
+        <h1 class="display-4">Book Now</h1>
+    </div>
+    <div class="container frmdb-section-dark">
+        <div data-frmdb-fragment="_form.html"></div>
+    </div>
 </header>
 <!--================Header Area =================-->
-
-<!--================Breadcrumb Area =================-->
-<section class="breadcrumb_area pb-3" style="padding-top: 110px">
-    <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
-    <div class="container">
-        <div data-frmdb-record="Booking~~">
-            <frmdb-fragment name="booking-F"></frmdb-fragment>
-        </div>
-    </div>
-</section>
-<!--================Breadcrumb Area =================-->
 
 <!--================ Accomodation Area  =================-->
 <section class="accomodation_area pt-3">
     <div class="container">
         <div class="section_title text-center mb-3">
-            <h2 class="title_color">Rooms</h2>
+            <h2 class="title_color">Available Rooms</h2>
             <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
         </div>
         <div class="row accomodation_two">
