re-added animate.css hover.css and fe map

--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -33,8 +33,8 @@
                             <frmdb-icon name="fontawesome-solid-search-bigger-enlarge-find-magnify-preview-zoom" class="sz-1p5"></frmdb-icon>
                         </span>
                     </div>
-                    <input type="text" class="form-control w-10-em" value="blog-post" disabled="" data-frmdb-value="$FRMDBQ.$Page[].filter.name.contains">
-                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" data-frmdb-value="$FRMDBQ.$Page[].filter.title.contains">
+                    <input type="text" class="form-control w-10-em" value="blog-post" disabled="" data-frmdb-filter="$FRMDB.$Page[].filter.name.contains">
+                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" data-frmdb-filter="$FRMDB.$Page[].filter.title.contains">
                 </div>
             </div>
             <div class="form-group col-md-4">
