--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -1,105 +1,136 @@
-<!--================Header Area =================-->
-<header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
-    <div class="jumbotron">
-        <h1 class="display-4">Book Now</h1>
-    </div>
-    <div class="container frmdb-section-dark">
-        <div data-frmdb-fragment="_form.html"></div>
-    </div>
-</header>
-<!--================Header Area =================-->
+<!DOCTYPE html>
+<html lang="en">
 
-<!--================ Accomodation Area  =================-->
-<section class="accomodation_area pt-3">
-    <div class="container">
-        <div class="section_title text-center mb-3">
-            <h2 class="title_color">Available Rooms</h2>
-            <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
-        </div>
-        <div class="row accomodation_two">
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Double Deluxe Room</h4></a>
-                    <h5>$250<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room2.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Single Deluxe Room</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Honeymoon Suit</h4></a>
-                    <h5>$750<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Economy Double</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Double Deluxe Room</h4></a>
-                    <h5>$250<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room2.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Single Deluxe Room</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Honeymoon Suit</h4></a>
-                    <h5>$750<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Economy Double</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--================ Accomodation Area  =================-->
+<head>
+    <title>King Hotel Booking Page</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
+</head>
 
-<frmdb-fragment name="footer-F" data-vvveb-disabled></frmdb-fragment>
+<body>
+    <!--================Header Area =================-->
+    <header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
+        <div class="jumbotron">
+            <h1 class="display-4">Book Now</h1>
+        </div>
+        <div class="container frmdb-section-dark">
+            <div data-frmdb-fragment="_form.html"></div>
+        </div>
+    </header>
+    <!--================Header Area =================-->
+
+    <!--================ Accomodation Area  =================-->
+    <section class="accomodation_area pt-3">
+        <div class="container">
+            <div class="section_title text-center mb-3">
+                <h2 class="title_color">Available Rooms</h2>
+                <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
+            </div>
+            <div class="row accomodation_two">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Double Deluxe Room</h4>
+                        </a>
+                        <h5>$250<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room2.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Single Deluxe Room</h4>
+                        </a>
+                        <h5>$200<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Honeymoon Suit</h4>
+                        </a>
+                        <h5>$750<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Economy Double</h4>
+                        </a>
+                        <h5>$200<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Double Deluxe Room</h4>
+                        </a>
+                        <h5>$250<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room2.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Single Deluxe Room</h4>
+                        </a>
+                        <h5>$200<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Honeymoon Suit</h4>
+                        </a>
+                        <h5>$750<small>/night</small></h5>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#">
+                            <h4 class="sec_h4">Economy Double</h4>
+                        </a>
+                        <h5>$200<small>/night</small></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================ Accomodation Area  =================-->
+
+    <div data-frmdb-fragment="_footer.html"></div>
+    <div data-frmdb-fragment="_scripts.html"></div>
+</body>
+
+</html>
